@@ -316,6 +316,9 @@ void Preferences::reset() {
 #if ENABLE_DELAYED_DRAGGING
 	time_slider_drag_delay = 100;
 #endif
+#if SEEKBAR_RESOLUTION
+	relative_seeking = true;
+#endif
 
 	language = "";
 	iconset = "";
@@ -714,6 +717,9 @@ void Preferences::save() {
 	set->setValue("update_while_seeking", update_while_seeking);
 #if ENABLE_DELAYED_DRAGGING
 	set->setValue("time_slider_drag_delay", time_slider_drag_delay);
+#endif
+#if SEEKBAR_RESOLUTION
+	set->setValue("relative_seeking", relative_seeking);
 #endif
 
 	set->setValue("language", language);
@@ -1129,6 +1135,9 @@ void Preferences::load() {
 	update_while_seeking = set->value("update_while_seeking", update_while_seeking).toBool();
 #if ENABLE_DELAYED_DRAGGING
 	time_slider_drag_delay = set->value("time_slider_drag_delay", time_slider_drag_delay).toInt();
+#endif
+#if SEEKBAR_RESOLUTION
+	relative_seeking = set->value("relative_seeking", relative_seeking).toBool();
 #endif
 
 	language = set->value("language", language).toString();
